pgAdmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-postgresadmin
  labels:
    app: postgresadmin
    sandbox: learn-kubernetes
    learn-kubernetes: postgresadmin
spec:
  selector:
    matchLabels:
      app: postgresadmin
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresadmin
        sandbox: learn-kubernetes
        learn-kubernetes: postgresadmin
    spec:
      containers:
        - name: postgresadmin
          image: ghcr.io/modul-i-ch-109/pgadmin4:latest
          ports:
           -  containerPort: 80
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
          imagePullPolicy: IfNotPresent

      restartPolicy: Always
