pgAdmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-postgresadmin

spec:
  selector:
    app: postgresadmin
    sandbox: learn-kubernetes
    learn-kubernetes: postgresadmin
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 80
