pgAdmin/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-postgresadmin
  labels:
    app: postgresadmin
    sandbox: learn-kubernetes
    learn-kubernetes: postgresadmin
spec:
  port:
    targetPort: 80
  to:
    kind: Service
    name: counter-postgresadmin
#  tls:
#    termination: edge
#    insecureEdgeTerminationPolicy: Redirect
